crates/typestate-pipeline/tests/ui/stable/pipeline_field_is_private.stderr
error[E0616]: field `ctx` of struct `Pipeline` is private
  --> tests/ui/stable/pipeline_field_is_private.rs:12:15
   |
12 |     let _ = p.ctx;
   |               ^^^ private field
   |
help: a method `ctx` also exists, call it with parentheses
   |
12 |     let _ = p.ctx();
   |                  ++

error[E0616]: field `inner` of struct `Pipeline` is private
  --> tests/ui/stable/pipeline_field_is_private.rs:13:15
   |
13 |     let _ = p.inner;
   |               ^^^^^ private field
